# huffman-coding

./: .gitignore  CHANGELOG.md  LICENSE  README.md  huffman.cabal
.github/workflows/: haskell.yml
docs/: docs.bib  docs.tex
src/: Huffman.hs  Main.hs
test/: Spec.hs
